--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,26 +4,29 @@
 name: Node.js CI
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - develop
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
+    - uses: actions/checkout@v2
+    
     - uses: actions/cache@v2
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
-          
-    - uses: actions/checkout@v2
-    
+        
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
 
